# joe-optx-hermes-api

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docker/: Dockerfile
src/hermes_optx_api/: __init__.py  app.py  cli.py  config.py  payments.py
src/hermes_optx_api/memory/: __init__.py  base.py  holographic.py  spacetimedb.py
src/hermes_optx_api/routes/: __init__.py  chat.py  config.py  memory.py  sessions.py  skills.py  tasks.py  wallet.py
